# timelog

./: .dockerignore  .gitignore  .jscpd.json  .pr_agent.toml  .semgrep.yml  .structurelint.yml  Dockerfile.daemon  README.md  biome.json  daemon.py  docker-entrypoint.sh  drizzle.config.ts  electron-builder.yml  main.py  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  sonar-project.properties  svelte.config.js  tailwind.config.ts  test-results.xml  tsconfig.json  vite.config.ts
.github/workflows/: cache-warm.yml  codeql.yml  merge-gate.yml  pr-agent.yml  pr-gate.yml  release.yml
docs/architecture/: ADR-001-project-architecture.md  ADR-002-toolchain.md  ADR-003-quality-gates.md  ADR-004-testing-strategy.md  ADR-005-cli-data-model-and-storage.md
docs/design-history/specs/: daemon-mode.md  manual-mode.md
docs/plans/: 2026-06-12-timelog-sveltekit.md  2026-06-14-timelog-electron.md
docs/specs/: 2026-06-12-timelog-sveltekit-design.md  2026-06-14-timelog-electron-design.md
drizzle/: 0000_smart_spirit.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
electron/: main.js  main.js.map  main.ts  preload.js  preload.js.map  preload.ts  tray.js  tray.js.map  tray.ts  tsconfig.json
electron/resources/: icon.icns
scripts/: auto-deploy.sh  deploy.sh
src/: app.css  app.d.ts
src/routes/: +layout.svelte  +page.server.ts  +page.svelte
tests/: conftest.py  test_daemon.py  test_main.py
tests/e2e/: timer.test.ts
tests/integration/: entries.test.ts
tests/unit/: format.test.ts  mic-engine.test.ts  notifications.test.ts  rms.test.ts  timer.test.ts  wellness.test.ts
(+42 files in other folders)
