[project]
name = "timelog"
version = "0.1.0"
description = "A minimal CLI time tracker for work"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.3",
    "pyaudio>=0.2.14",
    "rich>=15.0.0",
    "speechrecognition>=3.16.1",
]

[project.scripts]
timelog = "main:cli"

[tool.setuptools]
py-modules = ["main", "daemon"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "mutmut>=3.5.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
addopts = "--cov=main --cov=daemon --cov-branch --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["main", "daemon"]

[tool.coverage.report]
show_missing = true

[tool.mutmut]
paths_to_mutate = ["main.py", "daemon.py"]
tests_dir = ["tests"]
backup = false
runner = "uv run pytest"
dict_synonyms = ["project", "task", "current_activity"]
