[project]
name = "timelog"
version = "0.1.0"
description = "A minimal CLI time tracker for work"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.3",
    "pyaudio>=0.2.14",
    "rich>=15.0.0",
    "speechrecognition>=3.16.1",
]

[project.scripts]
timelog = "main:cli"

[tool.setuptools]
py-modules = ["main", "daemon"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mutmut>=3.5.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
